--- a/index.ipynb
+++ b/index.ipynb
@@ -29,9 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "df1 = pd.DataFrame({'A': ['A0', 'A1', 'A2', 'A3'],\n",
@@ -65,11 +76,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A0</td>\n",
+       "      <td>B0</td>\n",
+       "      <td>C0</td>\n",
+       "      <td>D0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A1</td>\n",
+       "      <td>B1</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>D1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A2</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>C2</td>\n",
+       "      <td>D2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A3</td>\n",
+       "      <td>B3</td>\n",
+       "      <td>C3</td>\n",
+       "      <td>D3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A4</td>\n",
+       "      <td>B4</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>D4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>A5</td>\n",
+       "      <td>B5</td>\n",
+       "      <td>C5</td>\n",
+       "      <td>D5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>A6</td>\n",
+       "      <td>B6</td>\n",
+       "      <td>C6</td>\n",
+       "      <td>D6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>A7</td>\n",
+       "      <td>B7</td>\n",
+       "      <td>C7</td>\n",
+       "      <td>D7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>A8</td>\n",
+       "      <td>B8</td>\n",
+       "      <td>C8</td>\n",
+       "      <td>D8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>A9</td>\n",
+       "      <td>B9</td>\n",
+       "      <td>C9</td>\n",
+       "      <td>D9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>A10</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>C10</td>\n",
+       "      <td>D10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>A11</td>\n",
+       "      <td>B11</td>\n",
+       "      <td>C11</td>\n",
+       "      <td>D11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      A    B    C    D\n",
+       "0    A0   B0   C0   D0\n",
+       "1    A1   B1   C1   D1\n",
+       "2    A2   B2   C2   D2\n",
+       "3    A3   B3   C3   D3\n",
+       "4    A4   B4   C4   D4\n",
+       "5    A5   B5   C5   D5\n",
+       "6    A6   B6   C6   D6\n",
+       "7    A7   B7   C7   D7\n",
+       "8    A8   B8   C8   D8\n",
+       "9    A9   B9   C9   D9\n",
+       "10  A10  B10  C10  D10\n",
+       "11  A11  B11  C11  D11"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "combined_df = None"
+    "combined_df = pd.concat([df1, df2, df3])\n",
+    "combined_df"
    ]
   },
   {
@@ -89,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,11 +257,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>B</th>\n",
+       "      <th>D</th>\n",
+       "      <th>F</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A2</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>C2</td>\n",
+       "      <td>D2</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>D2</td>\n",
+       "      <td>F2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A3</td>\n",
+       "      <td>B3</td>\n",
+       "      <td>C3</td>\n",
+       "      <td>D3</td>\n",
+       "      <td>B3</td>\n",
+       "      <td>D3</td>\n",
+       "      <td>F3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B   C   D   B   D   F\n",
+       "2  A2  B2  C2  D2  B2  D2  F2\n",
+       "3  A3  B3  C3  D3  B3  D3  F3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df1_and_4 = None\n",
+    "df1_and_4 = pd.concat([df1, df4], axis=1, join='inner')\n",
     "df1_and_4"
    ]
   },
@@ -362,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
