automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -376,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from s\n",
+    "from sqlalchemy import create_engine\n",
     "\n",
     "engine = None"
    ]
