--- a/index.ipynb
+++ b/index.ipynb
@@ -378,7 +378,7 @@
    "source": [
     "from sqlalchemy import create_engine\n",
     "\n",
-    "engine = cr"
+    "engine = create_engine('sqlite:///')"
    ]
   },
   {
