automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -372,13 +372,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sqlalchemy import create_engine\n",
     "\n",
-    "engine = create_engine('sqlite:///')"
+    "engine = create_engine('sqlite:///database.sqlite')"
    ]
   },
   {
