automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cards_df = pd.read_sql_dable\n",
+    "cards_df = pd.read_sql_table\n",
     "dust_df = None\n",
     "entourages_df = None\n",
     "mechanics_df = None\n",
