automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,8 +400,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cards_df = pd.read_sql_table('cards')\n",
-    "dust_df = None\n",
+    "cards_df = pd.read_sql_table('cards', engine)\n",
+    "dust_df = pd.read_sql_table{}\n",
     "entourages_df = None\n",
     "mechanics_df = None\n",
     "play_requirements_df = None"
