automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,7 +401,7 @@
    "outputs": [],
    "source": [
     "cards_df = pd.read_sql_table('cards', engine)\n",
-    "dust_df = pd.read_sql_table{}\n",
+    "dust_df = pd.read_sql_table('dust')\n",
     "entourages_df = None\n",
     "mechanics_df = None\n",
     "play_requirements_df = None"
