automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -403,7 +403,7 @@
     "cards_df = pd.read_sql_table('cards', engine)\n",
     "dust_df = pd.read_sql_table('dust')\n",
     "entourages_df = None\n",
-    "mechanics_df = pd.read_sql_T\n",
+    "mechanics_df = pd.read_sql_table('mechanics', en)\n",
     "play_requirements_df = None"
    ]
   },
