automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,8 +401,8 @@
    "outputs": [],
    "source": [
     "cards_df = pd.read_sql_table('cards', engine)\n",
-    "dust_df = pd.read_sql_table('dust')\n",
-    "entourages_df = None\n",
+    "dust_df = pd.read_sql_table('dust', engine)\n",
+    "entourages_df = pd.read_sql_table()\n",
     "mechanics_df = pd.read_sql_table('mechanics', engine)\n",
     "play_requirements_df = None"
    ]
