--- a/index.ipynb
+++ b/index.ipynb
@@ -402,7 +402,7 @@
    "source": [
     "cards_df = pd.read_sql_table('cards', engine)\n",
     "dust_df = pd.read_sql_table('dust', engine)\n",
-    "entourages_df = pd.read_sql_table()\n",
+    "entourages_df = pd.read_sql_table('entourages', engine)\n",
     "mechanics_df = pd.read_sql_table('mechanics', engine)\n",
     "play_requirements_df = None"
    ]
