--- a/index.ipynb
+++ b/index.ipynb
@@ -419,7 +419,7 @@
    ],
    "source": [
     "cards_df = pd.read_sql_table('cards', engine)\n",
-    "dust_df = pd.read_sql_table('dust', engine)\n",
+    "dust_df = pd.read_sql_table('dust_costs', engine)\n",
     "entourages_df = pd.read_sql_table('entourages', engine)\n",
     "mechanics_df = pd.read_sql_table('mechanics', engine)\n",
     "play_requirements_df = pd.read_sql_table('play_requirements', engine)"
