--- a/index.ipynb
+++ b/index.ipynb
@@ -423,7 +423,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cards_df.set_index('card_id', inplace=True)\n",
+    "cards_df.head()"
+   ]
   },
   {
    "cell_type": "code",
