--- a/index.ipynb
+++ b/index.ipynb
@@ -420,9 +420,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_class</th>\n",
+       "      <th>type</th>\n",
+       "      <th>name</th>\n",
+       "      <th>set</th>\n",
+       "      <th>text</th>\n",
+       "      <th>cost</th>\n",
+       "      <th>attack</th>\n",
+       "      <th>health</th>\n",
+       "      <th>rarity</th>\n",
+       "      <th>collectible</th>\n",
+       "      <th>flavor</th>\n",
+       "      <th>race</th>\n",
+       "      <th>how_to_earn</th>\n",
+       "      <th>how_to_earn_golden</th>\n",
+       "      <th>targeting_arrow_text</th>\n",
+       "      <th>faction</th>\n",
+       "      <th>durability</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>card_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>KARA_00_07</th>\n",
+       "      <td>MAGE</td>\n",
+       "      <td>SPELL</td>\n",
+       "      <td>Astral Portal</td>\n",
+       "      <td>KARA</td>\n",
+       "      <td>Summon a random &lt;b&gt;Legendary&lt;/b&gt; minion.</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEW1_008a</th>\n",
+       "      <td>DRUID</td>\n",
+       "      <td>SPELL</td>\n",
+       "      <td>Ancient Teachings</td>\n",
+       "      <td>EXPERT1</td>\n",
+       "      <td>Draw a card.</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BRM_010t2</th>\n",
+       "      <td>DRUID</td>\n",
+       "      <td>MINION</td>\n",
+       "      <td>Druid of the Flame</td>\n",
+       "      <td>BRM</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>COMMON</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>BEAST</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AT_132</th>\n",
+       "      <td>NEUTRAL</td>\n",
+       "      <td>MINION</td>\n",
+       "      <td>Justicar Trueheart</td>\n",
+       "      <td>TGT</td>\n",
+       "      <td>&lt;b&gt;Battlecry:&lt;/b&gt; Replace your starting Hero P...</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>LEGENDARY</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>It's like putting racing stripes and a giant s...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OG_141</th>\n",
+       "      <td>NEUTRAL</td>\n",
+       "      <td>MINION</td>\n",
+       "      <td>Faceless Behemoth</td>\n",
+       "      <td>OG</td>\n",
+       "      <td>None</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>COMMON</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Rejected names: Forty-Foot Faceless, Big ol' N...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           player_class    type                name      set  \\\n",
+       "card_id                                                        \n",
+       "KARA_00_07         MAGE   SPELL       Astral Portal     KARA   \n",
+       "NEW1_008a         DRUID   SPELL   Ancient Teachings  EXPERT1   \n",
+       "BRM_010t2         DRUID  MINION  Druid of the Flame      BRM   \n",
+       "AT_132          NEUTRAL  MINION  Justicar Trueheart      TGT   \n",
+       "OG_141          NEUTRAL  MINION   Faceless Behemoth       OG   \n",
+       "\n",
+       "                                                         text  cost  attack  \\\n",
+       "card_id                                                                       \n",
+       "KARA_00_07           Summon a random <b>Legendary</b> minion.   1.0     NaN   \n",
+       "NEW1_008a                                        Draw a card.   0.0     NaN   \n",
+       "BRM_010t2                                                None   3.0     2.0   \n",
+       "AT_132      <b>Battlecry:</b> Replace your starting Hero P...   6.0     6.0   \n",
+       "OG_141                                                   None  10.0    10.0   \n",
+       "\n",
+       "            health     rarity  collectible  \\\n",
+       "card_id                                      \n",
+       "KARA_00_07     NaN       None          NaN   \n",
+       "NEW1_008a      NaN       None          NaN   \n",
+       "BRM_010t2      5.0     COMMON          NaN   \n",
+       "AT_132         3.0  LEGENDARY          1.0   \n",
+       "OG_141        10.0     COMMON          1.0   \n",
+       "\n",
+       "                                                       flavor   race  \\\n",
+       "card_id                                                                \n",
+       "KARA_00_07                                               None   None   \n",
+       "NEW1_008a                                                None   None   \n",
+       "BRM_010t2                                                None  BEAST   \n",
+       "AT_132      It's like putting racing stripes and a giant s...   None   \n",
+       "OG_141      Rejected names: Forty-Foot Faceless, Big ol' N...   None   \n",
+       "\n",
+       "           how_to_earn how_to_earn_golden targeting_arrow_text faction  \\\n",
+       "card_id                                                                  \n",
+       "KARA_00_07        None               None                 None    None   \n",
+       "NEW1_008a         None               None                 None    None   \n",
+       "BRM_010t2         None               None                 None    None   \n",
+       "AT_132            None               None                 None    None   \n",
+       "OG_141            None               None                 None    None   \n",
+       "\n",
+       "            durability  \n",
+       "card_id                 \n",
+       "KARA_00_07         NaN  \n",
+       "NEW1_008a          NaN  \n",
+       "BRM_010t2          NaN  \n",
+       "AT_132             NaN  \n",
+       "OG_141             NaN  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cards_df.set_index('card_id', inplace=True)\n",
     "cards_df.head()"
