automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -654,7 +654,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dust_df.set_index('card_id')"
+    "dust_df.set_index('card_id', inplace = True)\n",
+    "dust_df."
    ]
   },
   {
