--- a/index.ipynb
+++ b/index.ipynb
@@ -421,7 +421,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -651,7 +653,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -739,7 +743,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ent"
+    "entourages_df"
    ]
   },
   {
