automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -751,7 +751,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mechanics_df"
+   ]
   },
   {
    "cell_type": "code",
