automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -743,7 +743,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "entourages_df"
+    "entourages_df.set_index"
    ]
   },
   {
@@ -760,7 +760,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "play_requirements_df"
+   ]
   },
   {
    "cell_type": "markdown",
