automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -743,7 +743,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "entourages_df.set_index"
+    "entourages_df.set_index('card_id', inplace = True\n",
+    "                )"
    ]
   },
   {
