automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -821,7 +821,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mechanics_df"
+    "mechanics_df.set_index('card')"
    ]
   },
   {
