--- a/index.ipynb
+++ b/index.ipynb
@@ -817,11 +817,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mechanic</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>card_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AT_132</th>\n",
+       "      <td>BATTLECRY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GVG_011a</th>\n",
+       "      <td>TAG_ONE_TURN_EFFECT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EX1_583</th>\n",
+       "      <td>BATTLECRY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LOE_007t</th>\n",
+       "      <td>EVIL_GLOW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LOE_007t</th>\n",
+       "      <td>ImmuneToSpellpower</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     mechanic\n",
+       "card_id                      \n",
+       "AT_132              BATTLECRY\n",
+       "GVG_011a  TAG_ONE_TURN_EFFECT\n",
+       "EX1_583             BATTLECRY\n",
+       "LOE_007t            EVIL_GLOW\n",
+       "LOE_007t   ImmuneToSpellpower"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mechanics_df.set_index('card_id', inplace = True)"
+    "mechanics_df.set_index('card_id', inplace = True)\n",
+    "mechanics_df.head()"
    ]
   },
   {
