automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -899,7 +899,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "play_requirements_df"
+    "play_requirements_df.set_index('card+')"
    ]
   },
   {
