automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1003,7 +1003,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cards_with_mechanics_df = cards_df,join\n",
+    "cards_with_mechanics_df = cards_df,join(mechanics_df)\n",
     "cards_with_mechanics_df"
    ]
   },
