automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1051,7 +1051,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_join_df = cards_df.\n",
+    "left_join_df = cards_df.join(play_requirements\n",
     "left_join_df"
    ]
   },
